--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   margin: 0;
   color: white;
@@ -12,20 +12,16 @@ body {
     white,
     rgb(255, 243, 187)
   );
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .main-menu {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 85px;
   margin-top: 1rem;
   z-index: 1;
   width: 100vw;
-  height: 100vh;
 }
 
 .cherry-blossom {
@@ -67,16 +63,19 @@ body {
 
 .sumo {
   position: absolute;
-  right: -250px;
-  bottom: -125px;
-  height: 65rem;
-  width: 65rem;
+  right: -10%;
+  bottom: -100px;
+  width: 50%;
+  aspect-ratio: auto 16 / 9;
+  z-index: 1;
 }
 
 .main-menu-btn-container {
   display: flex;
+  align-self: flex-start;
   flex-direction: column;
   gap: 1rem;
+  z-index: 2;
 }
 
 #play {
@@ -117,19 +116,28 @@ body {
   cursor: pointer;
 }
 
+.current-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .rooms {
   display: flex;
   flex-direction: column;
-  background-color: rgb(22, 22, 22);
-  width: 1300px;
-  height: 700px;
+  justify-self: center;
   align-self: center;
+  width: 75%;
+  height: 75%;
+  background-color: rgb(22, 22, 22);
   box-shadow: 0px 0px 2px 1px black;
   border-radius: 1%;
   position: relative;
   font-family: cursive;
   overflow-y: scroll;
   background-color: rgb(50, 50, 50);
+  z-index: 99;
 }
 
 /* .rooms > :first-child {
@@ -439,17 +447,13 @@ body {
   letter-spacing: 0.1em;
 }
 
-.game-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
+/* .game-wrapper {
+  width: 100%;
+  height: 100%;
+
   align-items: center;
   overflow: hidden;
-}
+} */
 
 .game-container {
   position: absolute;
@@ -464,4 +468,5 @@ body {
   background-size: cover;
   background-position: center;
   border: solid 2px black;
+  z-index: 99;
 }
