--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -9,6 +9,7 @@
   border: black 1px solid;
   border-radius: 0.5rem;
   box-shadow: 0px 0px 2px 1px black;
+  z-index: 99;
 }
 
 .lobby-fighters-container {
