--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,8 +128,9 @@ body {
   flex-direction: column;
   justify-self: center;
   align-self: center;
-  width: 75%;
-  height: 75%;
+  width: 75vw;
+  height: auto;
+  aspect-ratio: auto 16 / 9;
   background-color: rgb(22, 22, 22);
   box-shadow: 0px 0px 2px 1px black;
   border-radius: 1%;
