--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -1,98 +1,121 @@
 .lobby {
   display: flex;
-  flex-direction: column;
   position: relative;
   align-self: center;
-  width: 1300px;
-  height: 700px;
-  background-image: linear-gradient(white, white, white, black);
+  justify-content: center;
+  width: 75vw;
+  height: auto;
+  max-height: 90vh;
+  aspect-ratio: auto 16 / 9;
+  background-image: linear-gradient(
+    rgb(167, 252, 255),
+    rgb(206, 255, 253),
+    rgb(255, 255, 255),
+    rgb(0, 0, 0)
+  );
   border: black 1px solid;
   border-radius: 0.5rem;
   box-shadow: 0px 0px 2px 1px black;
   z-index: 99;
+  overflow: hidden;
 }
 
-.lobby-fighters-container {
+/* .lobby-fighters-container {
   display: flex;
   color: black;
   width: 100%;
-  align-items: center;
+  height: 40%;
   justify-content: center;
   padding-top: 8rem;
   position: relative;
   align-self: center;
-  gap: 450px;
   background-color: rgb(175, 236, 255);
-}
+} */
 
-.player-lobby {
+.player0-lobby {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  left: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  align-self: flex-start;
-  width: 215px;
+  flex-direction: column;
 }
 
-.kana1,
-.kana2 {
-  color: rgb(45, 45, 45);
-  font-size: 10rem;
-}
-
-.kana1 {
+.player1-lobby {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: absolute;
-  text-align: center;
-  top: -5rem;
-}
-
-.kana2 {
-  position: absolute;
-  text-align: center;
-  top: 7rem;
+  right: 0;
 }
 
 .waiting {
   font-family: "Bungee", Arial;
-  font-size: 1em;
-  width: 220px;
+  font-size: 1vw; /* Responsive font size */
+  width: 50%; /* Scales with the .lobby */
+  max-width: 400px; /* Optional: Prevent it from becoming too wide */
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 1vw; /* Proportional gap between elements */
   color: black;
-  margin-right: 4rem;
-  margin-top: 4rem;
+  margin: 0 auto; /* Center horizontally */
+  position: absolute;
+  top: 50%; /* Center vertically */
+  right: 8%;
 }
 
 .player-side {
   font-family: "Bungee Outline", cursive;
-  color: black;
-  font-size: 28pt;
+  background-color: rgba(0, 0, 0, 0.8);
   text-align: center;
+  font-size: 2vw;
+  padding: 2% 10%;
 }
 
 .player0 {
-  font-family: "Bungee Outline", cursive;
   color: aqua;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
-  width: 100%;
 }
 
 .player1 {
-  font-family: "Bungee Outline", cursive;
   color: salmon;
-  font-size: 28pt;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+}
+
+.lobby-fighter-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  height: auto;
+}
+
+.fighter0-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 50%;
+}
+.fighter1-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 50%;
 }
 
 .fighter1,
 .fighter2 {
-  height: 300px;
-  margin-bottom: -5rem;
+  width: 100%;
+  height: auto;
 }
 
 .fighter1 {
@@ -140,7 +163,7 @@
   cursor: pointer;
 }
 
-.dinkey:active,
+/* .dinkey:active,
 .daiba:active {
   box-shadow: 0px 0px 2px 2px white;
   background-color: black;
@@ -160,7 +183,7 @@
   color: rgb(255, 255, 255);
   font-size: 1em;
   font-family: "Bungee", cursive;
-}
+} */
 
 /* .fighter-container {
 } */
@@ -171,13 +194,13 @@
 
 .exit-btn {
   position: absolute;
-  bottom: 3rem;
-  left: 3rem;
+  bottom: 5%; /* Use percentage-based positioning */
+  left: 5%;
   background-color: black;
-  padding: 0.5rem 1.5rem;
+  padding: 1% 2%; /* Use percentage for padding */
   border-radius: 10px;
   border: none;
-  font-size: 21pt;
+  font-size: 1.5vw; /* Use viewport width for font size */
   color: white;
   font-family: "Bungee", cursive;
   text-align: start;
@@ -190,19 +213,19 @@
 }
 
 .ready {
-  width: fit-content;
+  width: 15%;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 2%; /* Use percentage for gap */
   align-self: center;
   position: absolute;
-  bottom: 3rem;
+  bottom: 5%; /* Use percentage for positioning */
 }
 
 .ready-btn {
-  font-size: 2.5rem;
+  font-size: 1.8vw; /* Use viewport width for font size */
   background-color: forestgreen;
-  padding: 0.5rem 2rem;
+  padding: 12% 4%; /* Use percentage for padding */
   border-radius: 10px;
   border: none;
   color: white;
@@ -301,22 +324,23 @@
 }
 
 #cancel-btn {
-  background-color: red;
-  padding: 0.5rem 1.5rem;
-  border: none;
-  font-size: 2.5rem;
+  font-size: 1.8vw; /* Use viewport width for font size */
+  background-color: rgb(139, 34, 34);
+  padding: 12% 4%; /* Use percentage for padding */
   border-radius: 10px;
-  font-family: "Bungee", Arial;
+  border: none;
   color: white;
   cursor: pointer;
+  font-family: "Bungee", cursive;
 }
 
 .ready-count {
   color: white;
   font-family: Tahoma, sans-serif;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 1.5vw;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-
-/* .avatar {
-} */
