--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,7 @@ body {
   width: 75vw;
   height: auto;
   aspect-ratio: auto 16 / 9;
+  max-height: 90vh;
   background-color: rgb(22, 22, 22);
   box-shadow: 0px 0px 2px 1px black;
   border-radius: 1%;
@@ -149,7 +150,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.6rem;
+  font-size: 1.5vw;
   border-top: grey solid 1px;
   border-bottom: grey solid 1px;
   background-color: rgb(25, 25, 25);
@@ -157,12 +158,12 @@ body {
 
 .room > button {
   margin: 10px;
-  padding: 10px 25px;
+  padding: 1% 2%;
   background-color: green;
   border: none;
   border-radius: 5%;
   color: white;
-  font-size: 1.6rem;
+  font-size: 1.5vw;
   cursor: pointer;
   font-family: "Bungee", cursive;
   text-align: center;
@@ -174,13 +175,13 @@ body {
 
 .room-id {
   font-family: "Bungee";
-  font-size: 1.6rem;
+  font-size: 1.5vw;
   margin-left: 1rem;
 }
 
 .room-count {
   font-family: Tahoma, sans-serif;
-  font-size: 1.3rem;
+  font-size: 1.5vw;
 }
 
 .back-btn:hover {
