--- a/client/src/App.css
+++ b/client/src/App.css
@@ -490,7 +490,7 @@ body {
   position: absolute;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
     2px 2px 0 #000;
-  top: 25%;
+  top: 21%;
   left: 50%;
   width: 50%; /* Scales with the .lobby */
   margin: 0 auto; /* Center horizontally */
@@ -505,4 +505,17 @@ body {
   pointer-events: none;
   font-family: "Bungee";
   letter-spacing: 0.1em;
+}
+
+.gyoji {
+  position: absolute;
+  /* Choose coordinates in percentages (for 1280x720) */
+  left: 36%;
+  bottom: 33%;
+
+  /* Scale the same as the penguins, e.g. 12% of container width */
+  width: 26%;
+  height: auto;
+  z-index: -1;
+  pointer-events: none;
 }
