--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -18,7 +18,7 @@
     rgb(255, 255, 255),
     rgb(0, 0, 0)
   ); */
-  border: black 1px solid;
+  border: black 2px solid;
   border-radius: 0.5rem;
   box-shadow: 0px 0px 2px 1px black;
   z-index: 99;
@@ -61,13 +61,13 @@
 
 .waiting {
   font-family: "Bungee", Arial;
-  font-size: 1.2vw; /* Responsive font size */
+  font-size: clamp(0.2rem, 1vw, 1.25rem); /* Responsive font size */
   width: 50%; /* Scales with the .lobby */
   max-width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1vw; /* Proportional gap between elements */
+  gap: 0.5vw; /* Proportional gap between elements */
   color: black;
   margin: 0 auto; /* Center horizontally */
   position: absolute;
@@ -77,15 +77,52 @@
     1px 1px 0 #ffffff;
 }
 
-#ellipses {
-  height: 7px;
+.loading-ellipsis {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.loading-ellipsis .dot {
+  width: 0.5em;
+  height: 0.5em;
+  margin: 0.2em;
+  border-radius: 50%;
+  background-color: white;
+
+  /* Animation properties */
+  animation: dotFlash 1.4s infinite ease-in-out both;
+}
+
+.loading-ellipsis .dot:nth-child(1) {
+  animation-delay: 0s;
+}
+.loading-ellipsis .dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.loading-ellipsis .dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes dotFlash {
+  0%,
+  80%,
+  100% {
+    background-color: white;
+  }
+  40% {
+    background-color: black;
+  }
+}
+/* #ellipses {
+  height: 7px;
+} */
 
 .player-side {
   font-family: "Bungee Outline", cursive;
   background-color: rgba(0, 0, 0, 0.8);
   text-align: center;
-  font-size: 2vw;
+  font-size: clamp(0.5rem, 2vw, 2rem);
   padding: 2% 10%;
 }
 
