--- a/client/src/components/MatchOver.css
+++ b/client/src/components/MatchOver.css
@@ -1,11 +1,17 @@
 .match-over-container {
-  background-color: rgb(0, 0, 0);
+  background-image: linear-gradient(
+    rgb(102, 102, 102),
+    rgb(0, 0, 0),
+    rgb(0, 0, 0),
+    rgb(0, 0, 0),
+    rgb(102, 102, 102)
+  );
   z-index: 200;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
-  width: 50%;
-  height: 75%;
+  width: 40%;
+  height: 55%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,9 +19,9 @@
   margin: 0 auto;
   font-size: clamp(0.2rem, 1vw, 1.25rem);
   transform: translate(-50%, -50%);
-  border-radius: 10%;
+  border-radius: 2%;
   gap: 20%;
-  border: rgb(255, 255, 255) 1vw solid;
+  border: rgb(220, 220, 220) 0.5vw solid;
 }
 
 .rematch {
@@ -25,21 +31,23 @@
   justify-content: center;
   gap: 1.5vh;
   font-size: clamp(0.2rem, 1vw, 1.25rem);
+  width: 20%;
 }
 
 .rematch-winner {
   font-family: "Bungee";
-  font-size: clamp(1rem, 4vw, 2.5rem);
+  font-size: clamp(0.5rem, 4vw, 2.5rem);
   justify-self: flex-start;
+  color: lime;
 }
 
 .rematch-ready-btn,
 .rematch-cancel-btn {
-  font-size: clamp(1rem, 4vw, 2.5rem);
+  font-size: clamp(0.5rem, 4vw, 2.5rem);
   background-color: forestgreen;
-  padding: 12% 4%; /* Use percentage for padding */
-  border-radius: 10px;
+  padding: 25% 10%; /* Use percentage for padding */
   border: none;
+  border-radius: 10px;
   color: white;
   cursor: pointer;
   width: fit-content;
@@ -71,7 +79,7 @@
   font-family: "Bungee", cursive;
   color: white;
   border: 1px solid white;
-  border-radius: 10px;
+
   cursor: pointer;
   padding: 3% 5%;
 }
