--- a/client/src/App.css
+++ b/client/src/App.css
@@ -259,6 +259,8 @@ body {
   align-items: center;
 }
 
+/* For full screen */
+/* width: 100%; max-width: 100vw; height: 100vh; max-height: calc(100vw * (9 / 16)); Ensure 16:9 ratio */
 .game-container {
   aspect-ratio: 16 / 9;
   width: 100%;
