--- a/client/src/components/MatchOver.css
+++ b/client/src/components/MatchOver.css
@@ -90,3 +90,16 @@
   cursor: pointer;
   padding: 1% 3%;
 }
+
+.win-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.win-text,
+.lose-text {
+  font-size: clamp(0.25rem, 2vw, 1.25rem);
+  color: gainsboro;
+}
