--- a/client/src/App.css
+++ b/client/src/App.css
@@ -260,7 +260,7 @@ body {
 }
 
 /* For full screen */
-/* width: 100%; max-width: 100vw; height: 100vh; max-height: calc(100vw * (9 / 16)); Ensure 16:9 ratio */
+/* width: 100%; max-width: 100vw; height: 100vh; max-height: calc(100vw * (9 / 16)); */
 .game-container {
   aspect-ratio: 16 / 9;
   width: 100%;
