--- a/client/src/App.css
+++ b/client/src/App.css
@@ -532,7 +532,7 @@ body {
   transform: translate(-50%, -50%);
   white-space: nowrap;
   max-width: 100%;
-  font-size: clamp(0.5rem, 4vw, 2.5rem); /* <-- MAIN CHANGE */
+  font-size: clamp(0.5rem, 4vw, 2.5rem);
   color: #fff;
   text-align: center;
   opacity: 1; /* Start invisible */
@@ -544,11 +544,8 @@ body {
 
 .gyoji {
   position: absolute;
-  /* Choose coordinates in percentages (for 1280x720) */
-  left: 36%;
-  bottom: 36%;
-
-  /* Scale the same as the penguins, e.g. 12% of container width */
+  left: 37%;
+  bottom: 30%;
   width: 26%;
   height: auto;
   z-index: -1;
