--- a/client/src/components/SlapParryEffect.css
+++ b/client/src/components/SlapParryEffect.css
@@ -1,21 +1,14 @@
 .slap-parry-effect {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   pointer-events: none;
-  z-index: 100;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .slap-parry-ring {
-  position: absolute;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   border: 4px solid white;
   animation: slapParryRing 0.3s ease-out forwards;
+  box-shadow: 0 0 10px #fff;
 }
 
 @keyframes slapParryRing {
