--- a/client/src/App.css
+++ b/client/src/App.css
@@ -271,8 +271,8 @@ body {
   overflow: hidden;
   background-image: url(./assets/game-map-1.png);
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center 10%; /* Start background 10% from the top */
+  background-size: 102% auto; /* Make the background larger */
+  background-position: center 2%; /* Position it lower */
   z-index: 99;
 }
 
@@ -556,7 +556,7 @@ body {
   position: absolute;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
     2px 2px 0 #000;
-  top: 21%;
+  top: 15%;
   left: 50%;
   width: 50%; /* Scales with the .lobby */
   margin: 0 auto; /* Center horizontally */
@@ -576,7 +576,7 @@ body {
 .gyoji {
   position: absolute;
   left: 38.5%;
-  bottom: 34%;
+  bottom: 45%;
   width: 23%;
   height: auto;
   z-index: -1;
