--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,9 +11,8 @@ body {
 .main-menu {
   display: flex;
   align-items: center;
-  width: 100%;
-  max-width: 1280px;
-  height: auto;
+  width: 100vw;
+  height: 100vh;
   aspect-ratio: 16 / 9;
   z-index: 100;
   position: relative;
@@ -30,7 +29,6 @@ body {
 
 .cherry-blossom {
   position: absolute;
-
   width: 10px;
   height: 10px;
   background-color: #ffc0cb;
@@ -147,9 +145,8 @@ body {
   flex-direction: column;
   justify-self: center;
   align-self: center;
-  width: 100%;
-  max-width: 1280px;
-  height: auto;
+  width: 100vw;
+  height: 100vh;
   aspect-ratio: 16 / 9;
   background-color: rgb(22, 22, 22);
   box-shadow: 0px 0px 2px 1px black;
@@ -250,30 +247,39 @@ body {
 }
 
 .game-wrapper {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #121213;
+  overflow: hidden;
 }
 
-/* For full screen */
-/* width: 100%; max-width: 100vw; height: 100vh; max-height: calc(100vw * (9 / 16)); */
 .game-container {
-  aspect-ratio: 16 / 9;
-  width: 100%;
-  max-width: 1280px;
-  height: auto;
   position: relative;
+  width: 100vw;
+  height: calc(100vw * 9 / 16);
+  max-width: 100vw;
+  max-height: 100vh;
+  aspect-ratio: 16 / 9;
   border: 2px solid black;
   overflow: hidden;
   background-image: url(./assets/game-map-1.png);
   background-repeat: no-repeat;
-  background-size: 102% auto; /* Make the background larger */
-  background-position: center; /* Position it lower */
+  background-size: 100% 100%;
+  background-position: center;
   z-index: 99;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .game-container {
+    width: calc(100vh * 16 / 9);
+    height: 100vh;
+  }
 }
 
 .ui {
